pattern-distributed/ingresses/wso2sp-receiver-ingress.yaml
# Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels: 
    pattern: wso2sp-pattern-distributed
  name: wso2sp-receiver-ingress
spec: 
  rules: 
    - 
      host: wso2sp-receiver
      http: 
        paths: 
          - 
            backend: 
              serviceName: wso2sp-receiver
              servicePort: 9550
            path: /
  tls: 
    - 
      hosts: 
        - wso2sp-receiver
